test_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
  labels:
    team: testing
    project: test
