nginxds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginxds
  namespace: test-ns
spec:
  selector:
    matchLabels:
      app: nginxapp
  template:
    metadata:
      labels:
        app: nginxapp
    spec:
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      containers:
      - name: nginxapp
        image: nginx
        ports:
        - containerPort: 80
