nginxpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxapp
  labels:
    app: nginxapp
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
