javawebapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebapp
  namespace: test-ns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: javawebapp
  template:
    metadata:
      labels:
        app: javawebapp
    spec:
      containers:
      - name: javawebapp
        image: balajidockerhandson/java-web-app:4
        ports:
        - containerPort: 8080
        resources:
          requests: 
            cpu: 400m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: javawebappsvc
  namespace: test-ns
spec:
  type: NodePort
  selector:
    app: javawebapp
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000  # optional; can omit to let Kubernetes assign automatically
