mongodb_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodbsvc
  namespace: test-ns
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
