nginxapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxapp
  labels:
    app: nginxapp
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxappsvc
spec:
  type: NodePort
  selector:
    app: nginxapp
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30003
